[package]
name = "libsm_stzhang"
version = "0.1.0"
authors = ["stuart_zhang <stuartpage@qq.com>"]
edition = "2018"
repository = "https://github.com/stuartZhang/libsm.git"
description = "A Rust Library of China's Standards of Encryption Algorithms (SM2/3/4)"
keywords = ["cipher", "cryptography"]
license = "Apache-2.0"

[dependencies]
rand = "0.4"
byteorder = "1.3.4"
num-bigint = "0.1"
num-traits = "0.2"
num-integer = "0.1"
yasna = "0.1.3"
lazy_static = "1.0"

[dev-dependencies]
hex = "0.3"
