[package]
name = "libsm_stzhang"
version = "0.1.0"
authors = ["stuart_zhang <stuartpage@qq.com>"]
edition = "2018"
repository = "https://github.com/stuartZhang/libsm.git"
description = "A Rust Library of China's Standards of Encryption Algorithms (SM2/3/4)"
keywords = ["cipher", "cryptography"]
license = "Apache-2.0"

[dependencies]
rand = { version = "0.7.3", features = ["stdweb", "wasm-bindgen"] }
byteorder = "1.3.4"
num-bigint = "0.2.6"
num-traits = "0.2.12"
num-integer = "0.1.43"
yasna = { version = "0.3.2", features = ["num-bigint"] }
lazy_static = "1.4.0"

[dev-dependencies]
hex = "0.4.2"
